--- a/configuration/partials/emails/award-authorize-body.html
+++ b/configuration/partials/emails/award-authorize-body.html
@@ -206,7 +206,8 @@
                                           <p>
                                             {{@root.data.accountInfo.first_name}} {{@root.data.accountInfo.last_name}}
                                             {{#if @root.data.accountInfo.school_college_name}}from {{@root.data.accountInfo.school_college_name}}{{/if}} is applying for a {{@root.context.metaData.certificateName}} {{@root.data.verifyInfoBody.hours_verify_award}} Award. This requires TSI Authorization to be awarded. </p>
-                                          <p> Please check Salesforce Saltire Volunteering Task records for this user, ensuring that Task Role and Description appear to fit criteria, and that organisations volunteered for and their contact emails appear to be genuine (Organisations themselves will validate the volunteers' hours). Set the TSI Award Authorization level to {{@root.data.verifyInfoBody.hours_verify_award}} if you wish this award to be authorized. </p>
+                                          <p> Please check Salesforce Saltire Volunteering Task records for this user, ensuring that Task Role and Description appear to fit criteria, and that organisations volunteered for and their contact emails appear to be genuine (Organisations themselves will validate the volunteers' hours). </p>
+                                          <p> Set the TSI Award Authorization level to {{@root.data.verifyInfoBody.hours_verify_award}} if you wish this award to be authorized. </p>
                                         </div>
                                       </td>
                                     </tr>
