--- a/configuration/partials/emails/request-printed-certificate-body.html
+++ b/configuration/partials/emails/request-printed-certificate-body.html
@@ -202,7 +202,7 @@
                                           <p>
                                             {{@root.data.accountInfo.first_name}} {{@root.data.accountInfo.last_name}}
                                             {{#if @root.data.accountInfo.school_college_name}}from {{@root.data.accountInfo.school_college_name}}{{/if}} has requested a printed certificate for their Saltire Award. </p>
-                                          <p> The certificate can be <a href="{{@root.data.accountInfo.certificate_url}}">viewed, downloaded, or printed</a>. </p>
+                                          <p> The certificate can be viewed, downloaded, or printed using this {{{@root.data.awardInfo.certificate_url}}} </p>
                                           <p> The certificate should be sent to: </p>
                                           <address>
                                             <strong>{{@root.data.accountInfo.first_name}} {{@root.data.accountInfo.last_name}}<br />
