--- a/configuration/partials/verify-testimonials.hbs
+++ b/configuration/partials/verify-testimonials.hbs
@@ -2,6 +2,7 @@
   <div class="h5 b-margin">
     {{inflect (length (split task_ids ",")) "Testimonial" "Testimonials"}} (optional)
   </div>
+
   {{#each (filter @root.data.tasksInfo "task_id" "valueIn" (split task_ids ",")) ~}}
 
     <form action="/update-task-testimonial/{{task_id}}?c={{@root.request.params.query.c}}&user_id={{@root.request.params.query.user_id}}" class="inline-hours-form"  data-component="TasksTrigger" data-form-element=">" {{#if (compare (length (split ../task_ids ",")) "===" 1)}}
@@ -25,7 +26,9 @@
           <textarea rows="3" placeholder="" cols="40" width="100%" id="testimonial" name="testimonial" class="inline-form-input inline-edit" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.testimonial}}>{{testimonial}}</textarea>
         </div>
         <div class="form-group">
+          {{#compare (length (filter @root.data.tasksInfo "task_id" "valueIn" (split ../task_ids ","))) ">" 1 }}
           <button type="submit" class="btn btn-success inline-update-button b-margin">Add testimonial</button>
+          {{/compare}}
         </div>
       </div>
     </div>
