--- a/configuration/partials/certificate/content.hbs
+++ b/configuration/partials/certificate/content.hbs
@@ -186,7 +186,7 @@
 },
 {{/if ~}}
 {{/if ~}}
-{{#if sdgs ~}}
+{{!-- {{#if sdgs ~}}
 {
   "text": {{>pdf_metadata_value key="title" default=(concat "Contributing towards " (inflect (length (split sdgs ';')) 'Goal' 'Goals'))}},
   "color": "{{> sdg_color sdg=un_sustainable_development_goals}}",
@@ -204,7 +204,7 @@
 },
 {{/if ~}}
 {{/each ~}}
-{{/if ~}}
+{{/if ~}} --}}
 {
   "width": 150,
   {{#each @root.context.metaData.certificates ~}}
@@ -224,7 +224,7 @@
   "text": {{>pdf_metadata_value key="title" default=signature_name}},
   {{/compare ~}}
   {{/each ~}}
-  "style": ["volunteering_detail", "bold"],
+  "style": ["signature", "bold"],
   "absolutePosition": {
     "x": 70,
     "y": 680
@@ -236,7 +236,7 @@
   "text": {{>pdf_metadata_value key="title" default=signature_title}},
   {{/compare ~}}
   {{/each ~}}
-  "style": ["volunteering_detail", "bold"],
+  "style": ["signature", "bold"],
   "absolutePosition": {
     "x": 70,
     "y": 695
@@ -248,7 +248,7 @@
     "the Scottish Government of 12-25 year old\n",
     "volunteers and their achievements"
   ],
-  "style": "volunteering_detail",
+  "style": "signature",
   "absolutePosition": {
     "x": 70,
     "y": 710
@@ -283,7 +283,7 @@
   "margin": [0, 0, 0, 0],
   "absolutePosition": {
     "x": 430,
-    "y": 580
+    "y": 590
   }
 },
 {{/if ~}}
