--- a/configuration/templates/volunteering/claim-hours.hbs
+++ b/configuration/templates/volunteering/claim-hours.hbs
@@ -13,7 +13,7 @@
           <strong>Enter your claim code</strong>
         </label>
         <div class="input-group">
-          <input id="task-code" name="award_claim_code" class="form-input claim-code input-lg" placeholder="" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.task-code}}>
+          <input id="task-code" name="award_claim_code" class="form-input claim-code input-lg" placeholder="" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.task_code}}>
           <button id="detail-submit" type="submit" class="submit-button btn btn-primary btn-lg input-group-btn">
             Claim hours
           </button>
