--- a/configuration/templates/volunteering/profile.hbs
+++ b/configuration/templates/volunteering/profile.hbs
@@ -12,7 +12,7 @@
   </p>
   {{/if ~}}
   {{/with ~}}
-  {{#if @root.data.awardsStatus.current ~}}
+  {{!-- {{#if @root.data.awardsStatus.current ~}}
   {{#each @root.context.metaData.certificates ~}}
   {{#compare @root.data.awardsStatus.current hours ~}}
   <p class="empty-title h5">
@@ -21,7 +21,7 @@
   {{> badge api_name=api_name}}
   {{/compare ~}}
   {{/each ~}}
-  {{/if ~}}
+  {{/if ~}} --}}
   {{#ifAll (compare @root.data.auth.uid @root.data.accountInfo.external_id) (compare (length @root.data.tasksInfo) ">" 0) ~}}
   <div class="empty-subtitle">
     <div class="columns">
@@ -47,7 +47,26 @@
     <polygon fill="#ebedfa" points="100,0 100,100 0,0"></polygon>
   </svg>
   <div class="container">
-    <h2>Volunteering details</h2>
+    {{#compare (length @root.data.accountInfo.awards_list) ">" 0 ~}}
+    <h2>Awards</h2>
+
+    <div class="columns b-margin-full">
+      {{#each @root.data.accountInfo.awards_list ~}}
+      {{#each @root.context.metaData.certificates ~}}
+      {{#compare ../award_level api_name ~}}
+      <div class="column col-4 col-md-6 col-sm-12">
+        <p class="h5 text-center b-margin">
+          {{type_name}}: {{certificate_name}} hours
+        </p>
+        {{> badge api_name=api_name}}
+      </div>
+      {{/compare ~}}
+      {{/each ~}}
+      {{/each ~}}
+    </div>
+    {{/compare ~}}
+
+    <h2>Volunteering</h2>
 
     <div class="columns cards equal-height">
       {{#each @root.data.tasksInfo ~}}
