text button update

--- a/configuration/partials/log-action-buttons.hbs
+++ b/configuration/partials/log-action-buttons.hbs
@@ -7,7 +7,7 @@
   {{/unless ~}}
   {{#unless (compare (sumArray (pluck @root.data.tasksInfo "hours")) 0) ~}}
   <a href="/claim-award" class="btn">
-    Claim hours with code
+    Claim award with code
   </a>
   {{/unless ~}}
   {{else}}
