added striptags to all data entries

--- a/configuration/templates/admin/group-awards-submit-body.hbs
+++ b/configuration/templates/admin/group-awards-submit-body.hbs
@@ -9,8 +9,8 @@
           {{{json key='user_sf_id' value=@root.data.accountInfo.user_sf_id}}},
           {{{json key='award_level' value=@root.request.body.award}}},
           {{{json key='award_type' value='Group Award'}}},
-          {{{json key='group_award_first_name' value=(firstItem (split this " "))}}},
-          {{{json key='group_award_last_name' value=(substr this (add (length (firstItem (split this " "))) 1))}}},
+          {{{json key='group_award_first_name' value=(stripTags (firstItem (split this " ")))}}},
+          {{{json key='group_award_last_name' value=(stripTags (substr this (add (length (firstItem (split this " "))) 1)))}}},
           "group_award_claimed" : false,
           "printed_certificate_requested" : false,
           "printed_certificate_issued" : false,
