--- a/configuration/templates/account/auth/user-body-submit.hbs
+++ b/configuration/templates/account/auth/user-body-submit.hbs
@@ -6,34 +6,34 @@
         {{{json key='hours_verify_award' value=@root.data.accountInfo.hours_verify_award }}},
 
         {{#if @root.data.codeRequired}}
-          {{{json key='approval_code' value=code}}},
-          {{{json key='approval_email' value=approval_email}}},
+          {{{json key='approval_code' value=(stripTags code)}}},
+          {{{json key='approval_email' value=(stripTags approval_email)}}},
           {{#json key='approval_url' type="text"}}{{@root.context.metaData.url}}/user-approval/?code={{code}}&user_id={{external_id}}{{/json}},
           {{#json key='approval_needed' type="boolean"}}true{{/json}},
         {{else}}
           "approval_needed" : false, {{!-- Hack - it's not possible to enter false in the json parser due to a bug --}}
         {{/if}}
 
-        {{{json key='first_name' value=first_name}}},
-        {{{json key='last_name' value=last_name}}},
-        {{{json key='postcode' value=postcode}}},
-        {{{json key='external_id' value=external_id}}},
-        {{{json key='date_of_birth' value=date_of_birth}}},
-        {{{json key='organisation_name' value=organisation_name}}},
-        {{{json key='school_college_name' value=school_college_name}}},
-        {{{json key='school_college_id' value=school_college_id}}},
-        {{{json key='phone' value=phone}}},
-        {{{json key='title' value=title}}},
-        {{{json key='email' value=email}}},
+        {{{json key='first_name' value=(stripTags first_name)}}},
+        {{{json key='last_name' value=(stripTags last_name)}}},
+        {{{json key='postcode' value=(stripTags postcode)}}},
+        {{{json key='external_id' value=(stripTags external_id)}}},
+        {{{json key='date_of_birth' value=(stripTags date_of_birth)}}},
+        {{{json key='organisation_name' value=(stripTags organisation_name)}}},
+        {{{json key='school_college_name' value=(stripTags school_college_name)}}},
+        {{{json key='school_college_id' value=(stripTags school_college_id)}}},
+        {{{json key='phone' value=(stripTags phone)}}},
+        {{{json key='title' value=(stripTags title)}}},
+        {{{json key='email' value=(stripTags email)}}},
         "email_consent" : {{#compare email_consent '===' 'on'}}true{{else}}false{{/compare}},
         "public_profile" : {{#compare public_profile '===' 'on'}}true{{else}}false{{/compare}},
-        {{{json key='ward_code' value=ward_code}}},
-        {{{json key='district_code' value=district_code}}},
-        {{{json key='nuts_3_code' value=nuts_3_code}}},
-        {{{json key='constituency_code' value=constituency_code}}},
-        {{{json key='local_authority' value=local_authority}}},
-        {{{json key='tsi_contact_email' value=tsi_contact_email}}},
-        {{{json key='tsi_area' value=tsi_area}}},
+        {{{json key='ward_code' value=(stripTags ward_code)}}},
+        {{{json key='district_code' value=(stripTags district_code)}}},
+        {{{json key='nuts_3_code' value=(stripTags nuts_3_code)}}},
+        {{{json key='constituency_code' value=(stripTags constituency_code)}}},
+        {{{json key='local_authority' value=(stripTags local_authority)}}},
+        {{{json key='tsi_contact_email' value=(stripTags tsi_contact_email)}}},
+        {{{json key='tsi_area' value=(stripTags tsi_area)}}},
         "summit_certificate_permission" : {{#if @root.data.accountInfo.summit_certificate_permission}}true{{else}}false{{/if}},
         {{{json key='user_type' value=(if admin "Group Admin" else="Volunteer")}}}
       {{/json}},
