--- a/configuration/templates/admin/group-award-edit-body.hbs
+++ b/configuration/templates/admin/group-award-edit-body.hbs
@@ -2,23 +2,23 @@
 {{#with @root.request.body}}
   {{#json key='award_input' type='array'}}
     {{#json}}
-      {{{json key='task_id' value=task_id}}},
+      {{{json key='task_id' value=(stripTags task_id)}}},
       {{{json key='user_id' value=@root.data.auth.uid}}},
       {{{json key='user_sf_id' value=@root.data.accountInfo.user_sf_id}}},
-      {{{json key='award_id' value=award_id}}},
-      {{{json key='award_level' value=award}}},
+      {{{json key='award_id' value=(stripTags award_id)}}},
+      {{{json key='award_level' value=(stripTags award)}}},
       {{{json key='award_type' value='Group Award'}}},
-      {{#if group_award_first_name }}{{{json key='group_award_first_name' value=group_award_first_name }}},{{/if}}
-      {{#if group_award_last_name }}{{{json key='group_award_last_name' value=group_award_last_name }}},{{/if}}
-      {{#if claim_code}}{{{json key='claim_code' value=claim_code}}},{{/if}}
+      {{#if group_award_first_name }}{{{json key='group_award_first_name' value=(stripTags group_award_first_name )}}},{{/if}}
+      {{#if group_award_last_name }}{{{json key='group_award_last_name' value=(stripTags group_award_last_name )}}},{{/if}}
+      {{#if claim_code}}{{{json key='claim_code' value=(stripTags claim_code)}}},{{/if}}
       "group_award_claimed" : false,
       "printed_certificate_requested" : false,
       "printed_certificate_issued" : false,
-      {{{json key='claim_code' value=claim_code}}},
-      {{{json key='un_sustainable_development_goals' value=un_sustainable_development_goals}}},
-      {{{json key='role_1' value=role_1}}},
-      {{{json key='organisation_name_1' value=organisation_name_1}}},
-      {{{json key='testimonial_1' value=testimonial_1}}}
+      {{{json key='claim_code' value=(stripTags claim_code)}}},
+      {{{json key='un_sustainable_development_goals' value=(stripTags un_sustainable_development_goals)}}},
+      {{{json key='role_1' value=(stripTags role_1)}}},
+      {{{json key='organisation_name_1' value=(stripTags organisation_name_1)}}},
+      {{{json key='testimonial_1' value=(stripTags testimonial_1)}}}
     {{/json}}
   {{/json}}
 {{/with}}
