--- a/configuration/templates/admin/individual-hours-body.hbs
+++ b/configuration/templates/admin/individual-hours-body.hbs
@@ -2,14 +2,14 @@
   {{#with @root.request.body}}
     {{#json key='hours_input' type='array'}}
       {{#json}}
-        {{{json key='task_id' value=task_id}}},
-        {{{json key='hours' value=hours}}},
-        {{{json key='hours_id' value=hours_id}}},
-        {{{json key='user_id' value=user_id}}},
-        {{{json key='notes' value=notes}}},
-        {{#if claim_first_name }}{{{json key='claim_first_name' value=claim_first_name}}},{{/if}}
-        {{#if claim_last_name }}{{{json key='claim_last_name' value=claim_last_name}}},{{/if}}
-        {{#if claim_code }}{{{json key='claim_code' value=claim_code}}},{{/if}}
+        {{{json key='task_id' value=(stripTags task_id)}}},
+        {{{json key='hours' value=(stripTags hours)}}},
+        {{{json key='hours_id' value=(stripTags hours_id)}}},
+        {{{json key='user_id' value=(stripTags user_id)}}},
+        {{{json key='notes' value=(stripTags notes)}}},
+        {{#if claim_first_name }}{{{json key='claim_first_name' value=(stripTags claim_first_name)}}},{{/if}}
+        {{#if claim_last_name }}{{{json key='claim_last_name' value=(stripTags claim_last_name)}}},{{/if}}
+        {{#if claim_code }}{{{json key='claim_code' value=(stripTags claim_code)}}},{{/if}}
         {{{json key='verified' value=true}}}
       {{/json}}
     {{/json}}
