--- a/configuration/templates/volunteering/task-body-submit.hbs
+++ b/configuration/templates/volunteering/task-body-submit.hbs
@@ -1,20 +1,20 @@
 {{#with @root.request.body}}
   {{#json}}
     {{#json key='task'}}
-      {{{json key='organisation_name' value=organisation_name}}},
-      {{{json key='internal_reference' value=internal_reference}}},
-      {{{json key='location' value=location}}},
-      {{{json key='organisation_charity_number' value=organisation_charity_number }}},
-      {{{json key='un_sustainable_development_goals' value=(default (join un_sustainable_development_goals ';') un_sustainable_development_goals)}}},
-      {{{json key='task_description' value=task_description}}},
-      {{{json key='task_role' value=task_role}}},
-      {{{json key='volunteer_manager_email' value=volunteer_manager_email }}},
-      {{{json key='volunteer_manager_first_name' value=volunteer_manager_first_name}}},
-      {{{json key='volunteer_manager_last_name' value=volunteer_manager_last_name }}},
-      {{{json key='volunteer_manager_phone' value=volunteer_manager_phone }}},
-      {{{json key='volunteer_manager_title' value=volunteer_manager_title }}},
-      {{{json key='testimonial' value=testimonial}}},
-      {{{json key='task_type' value=task_type}}}
+      {{{json key='organisation_name' value=(stripTags organisation_name)}}},
+      {{{json key='internal_reference' value=(stripTags internal_reference)}}},
+      {{{json key='location' value=(stripTags location)}}},
+      {{{json key='organisation_charity_number' value=(stripTags organisation_charity_number )}}},
+      {{{json key='un_sustainable_development_goals' value=(stripTags (default (join un_sustainable_development_goals ';') un_sustainable_development_goals))}}},
+      {{{json key='task_description' value=(stripTags task_description)}}},
+      {{{json key='task_role' value=(stripTags task_role)}}},
+      {{{json key='volunteer_manager_email' value=(stripTags volunteer_manager_email )}}},
+      {{{json key='volunteer_manager_first_name' value=(stripTags volunteer_manager_first_name)}}},
+      {{{json key='volunteer_manager_last_name' value=(stripTags volunteer_manager_last_name )}}},
+      {{{json key='volunteer_manager_phone' value=(stripTags volunteer_manager_phone )}}},
+      {{{json key='volunteer_manager_title' value=(stripTags volunteer_manager_title )}}},
+      {{{json key='testimonial' value=(stripTags testimonial)}}},
+      {{{json key='task_type' value=(stripTags task_type)}}}
     {{/json}}
   {{/json}}
 {{/with}}
